# thrive_ui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  INSTRUCTIONS.md  README.md  SECURITY.md  app.py  communicate.py  config.yaml  docker-compose.yml  issue-9-changes-summary.txt  pyproject.toml  pytest.ini  requirements.txt  sample_community_questions.csv  train_vanna.py
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.github/workflows/: deploy-dev.yml
.streamlit/: config.toml  secrets_example.toml
agent/: __init__.py  artifacts.py  audit.py  code_normalizer.py  dataframe_adapters.py  deps.py  deps_builder.py  fallback.py  instructions.py  logging_config.py  models.py  observability.py  observability_gate.py  result_compaction.py  run_logger.py  runner.py  runtime.py  session_reset.py  state.py  system_prompt.py
agent/codes/: allergies.py  loader.py
agent/db/: analytics_adapter.py  sql_context.py  sql_literals.py
agent/rag/: adapter.py  chroma_adapter.py  seed.py
agent/tools/: __init__.py  find_patient.py  get_patient_clinical_data.py  list_patient_documents.py  make_chart.py  run_sql.py  search_codes.py  search_knowledge_base.py  search_patients_by_criteria.py  summarize_results.py
alembic/: env.py
analytics/: 20250327_155733.parquet  20250329_150404.parquet  20250405_205651.parquet
data/sample/: .gitignore  README.md
deploy/: streamlit.service
docs/: USER_GUIDE.md
dto/: Message.py
evals/: README.md  collect.py  discovery.py  judge.py  latency.py  matrix.py  patients.py  q9_meds_smoke.yaml  questions.yaml  report.py  roster.example.yaml
helperClasses/: Enums.py  auth.py  communicate.py  llm_calls.py  train_vanna.py  vanna_calls.py
llmdocs/: database.md
models/: database.py  message.py  user.py
orm/: agent_logging_functions.py  error_read_model.py  functions.py  logging_functions.py  models.py
pgDatabase/: app_data.sql  penguins.txt  titanic.txt
scratchpads/: issue-11-visual-message-grouping.md  issue-16-followup-button.md  issue-2-auto-retry-sql-generation.md  issue-22-move-followup-questions.md  issue-4-collapsible-errors.md  issue-5-thinking-block-ux.md  issue-9-automatic-rag-enhancement.md
scripts/: agent_eval_harness.py  agent_replay.py  alembic_init_existing_db.py  cleanup_test_artifacts.py  debug_gemini_config.py  generate_eval_report.py  init_analytics_db.py  load_sample_db.py  migrate_add_conversations.py  migrate_add_feedback_comment.py  migrate_add_group_id.py  migrate_add_group_id_cli.py  migrate_add_llm_preferences.py  migrate_add_okta_columns.py  migrate_add_theme.py  migrate_chromadb_collections.py  migrate_database.py  migrate_feedback_columns.sql  migrate_passwords.py  rm_collection.py  run_representative_regression.py  seed_agent_rag.py  seed_milvus_sample.py
tests/: README.md  conftest.py  test_alembic.py  test_cleanup_demo.py
utils/: auth.py  authentication_management.py  chart_shim.py  chat_bot_helper.py  chromadb_vector.py  communicate.py  config_helper.py  discord_logging.py  domain_topic_classifier.py  enums.py  error_fallback_sink.py  ethical_guideline.py  langsec.py  llm_calls.py  logging_config.py  magic_functions.py  milvus_vector.py  okta_auth.py  quick_logger.py  report_service.py  schema_enrichment.py  security.py  security_validator.py  semantic_magic_service.py  summary_shim.py  thriveai_base.py  thriveai_ollama.py  train_vanna.py  trend_visualization.py  vanna_calls.py
views/: _admin_helpers.py  admin.py  admin_agentic.py  admin_analytics.py  admin_analytics_consolidated.py  admin_audit.py  admin_audit_by_patient.py  admin_audit_queries.py  admin_feedback.py  admin_training.py  admin_users.py  agent_analytics.py  analytics.py  chat_bot.py  conversation_sidebar.py  errors.py  errors_helpers.py  login.py  my_account.py  user.py
(+318 files in other folders)
