[project]
name = "thrive-ai"
version = "0"
description = "Thrive AI Chatbot"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=1.1.0",
    "ethical-guardrails-lib",
    "kaleido==0.2.1",
    "ollama>=0.4.7",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "requests>=2.31.0",
    "pyperclip>=1.9.0",
    "pyttsx3>=2.98",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "speechrecognition>=3.14.1",
    "streamlit>=1.43.2",
    "streamlit-cookies-manager-ext>=0.1.0",
    "vanna[anthropic,chromadb,gemini,ollama,postgres]==2.0.2",
    "google-generativeai>=0.8.0",  # vanna 2.0.2 [gemini] extra switched to google-genai (new SDK); legacy GoogleGeminiChat still needs this (old SDK)
    "wordcloud>=1.9.4",
    "vertexai>=1.71.1",  # required transitively by `vanna.legacy.google` __init__ -> BigQuery_VectorStore
    "pymilvus>=2.6.0; sys_platform == 'linux' or sys_platform == 'darwin'",
    "milvus-lite>=2.5.1; sys_platform == 'linux' or sys_platform == 'darwin'",
    "openpyxl>=3.1.0",
    "pydantic-ai>=1.90.0",
    "authlib>=1.6.11",
    "sqlalchemy-redshift>=1.0.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "alembic>=1.13",
    "griffe>=2.0.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.9",
    "ty>=0.0.4",
    "watchdog>=6.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["alembic/versions"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
markers = [
    "unit: fast, isolated unit tests",
    "milvus: tests that require a running Milvus instance",
    "sample_db: requires the sample database loaded in a running Postgres",
]

[tool.uv.sources]
ethical-guardrails-lib = { git = "https://github.com/ThriveAI-Solutions/ethical_guardrails_lib.git" }
